TAG: uniprotload-4-4-0-6
TAG: uniprotload-4-4-0-5
TAG: uniprotload-4-4-0-4
TAG: uniprotload-4-4-0-3
TAG: uniprotload-4-4-0-2
DATE: 11/10/2010, 11/11/2010, 12/01/2010
STAFF: lec
CHANGES:
1) TR10443/makeGOAnnot.py/attach correct UniProtKB to IP/SP annotations
2) processIP2GO,processSPKW2GO was commented out during last test

TAG: uniprotload-4-4-0-1
DATE: 10/13/2010
STAFF: lec
CHANGES:
1) TR10411/UniProtParser.py/strip out "." in DR records

TAG: uniprotload-4-3-3-22
DATE: 08/23/2010
STAFF: lec
CHANGES:
1) makeGOAnnot.py
   TR 5430/change nonIEA_annot from list to dictionary for speed
   and remove the test query from the openFiles/nonIEA_annot dictionary

TAG: uniprotload-4-3-3-21
TAG: uniprotload-4-3-3-20
DATE: 06/22/2010
STAFF: lec
CHANGES:
1) makeBucketsDiff.py
   ignore the .txt lines that contain "total number" 

TAG: uniprotload-4-3-3-19
DATE: 05/26/2010
STAFF: lec
CHANGES:
1) TR10231/makeMGIAssocFile.py, makeBuckets.py, makeGOAnnot.py

TAG: uniprotload-4-3-3-18
TAG: uniprotload-4-3-3-17
DATE: 05/25/2010
STAFF: lec
CHANGES:
1) Install; create empty save files
2) bin/makeBucketsDiff.py

TAG: uniprotload-4-3-3-16
DATE: 05/20/2010
STAFF: lec
CHANGES:
1) TR 9777/makeInterProAnnot.py/both SwissProt and TrEMBL associations

TAG: uniprotload-4-3-3-15
DATE: 05/19/2010
STAFF: lec
CHANGES:
1) TR 9777/code review changes

TAG: uniprotload-4-3-3-14
DATE: 05/13/2010
STAFF: lec
CHANGES:
1) TR 9777/new
2) added Marker Symbol to buckets

TAG: uniprotload-4-3-3-13
TAG: uniprotload-4-3-3-12
TAG: uniprotload-4-3-3-11
DATE: 05/11/2010
STAFF: lec
CHANGES:
1) TR 9777/new
2) remove TrEMBL associations from makeGOAnnot.py

TAG: uniprotload-4-3-3-10
TAG: uniprotload-4-3-3-9
TAG: uniprotload-4-3-3-8
TAG: uniprotload-4-3-3-7
TAG: uniprotload-4-3-3-6
TAG: uniprotload-4-3-3-5
TAG: uniprotload-4-3-3-4
TAG: uniprotload-4-3-3-3
TAG: uniprotload-4-3-3-2
TAG: uniprotload-4-3-3-1
DATE: 04/01/2010, 04/13/2010
STAFF: lec
CHANGES:
1) TR 9777/new
