@@ -1,3 +1,9 @@
+TAG: uniprotload-4-4-1-1
+DATE: 01/11/2011
+STAFF: lec
+CHANGES:
+1) TR10521/prevent use of GO:0005515
+
 TAG: uniprotload-4-4-0-6
 TAG: uniprotload-4-4-0-5
 TAG: uniprotload-4-4-0-4
